# algoscwk2

./: .gitignore  CMakeLists.txt  PROJECT_GUIDE.md  README.md  checkpoint1.py
analysis/: README.md  plot_evaluation.py
include/: MurmurHash3.hpp
outputs/.mplconfig/: fontlist-v330.json  fontlist-v390.json
outputs/analysis/: summary.md
outputs/evaluation/: baseline_vs_improved.csv  bin_scheme_comparison.csv  bins_sweep.csv  classifier_accuracy_vs_n.csv  classifier_confusion_matrix.csv  epoch_sweep.csv  flow_count_sweep.csv  grey_failure_comparison.csv  hash_rotation.csv  histogram_accuracy.csv  memory_sweep.csv  per_type_breakdown.csv  sensitivity_sweep.csv  snapshots_sweep.csv  threshold_sweep.csv  zipf_sweep.csv
sketches/: base.py  cms.py  cs.py  cu_cms.py
src/: checkpoint1.cpp  checkpoint2.cpp  checkpoint3.cpp  checkpoint4.cpp  checkpoint5.cpp  checkpoint6.cpp  evaluation.cpp  main.cpp
src/generator/: stream_generator.hpp
src/sketches/: base_sketch.hpp  bin_config.hpp  cms.hpp  cs.hpp  cu_cms.hpp
src/temporal/: change_classifier.hpp  differencer.hpp  epoch_manager.hpp  stream_processor.hpp
